--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react-connect-button",
+  "name": "@radixdlt/react-connect-button",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radixdlt/connect-button": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
